<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_socket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_socket_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_socket_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_socket_name"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_socket_area_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_socket_area"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_socket_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_socket_code"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <Button
        android:id="@+id/dialog_socket_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@xml/button_blank_white"
        android:text="@string/save"
        android:textColor="@color/TextIcon" />

</LinearLayout>