<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_movie_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_movie_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_movie_title"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_movie_genre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_movie_genre"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_movie_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_movie_description"
        android:inputType="textMultiLine"
        android:textColor="@color/TextIcon" />

    <RatingBar
        android:id="@+id/dialog_movie_description_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <Button
        android:id="@+id/dialog_movie_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@xml/button_blank_white"
        android:text="@string/save"
        android:textColor="@color/TextIcon" />

</LinearLayout>