<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_user_password_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_user_name"
        android:textColor="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_user_password"
        android:inputType="textPassword"
        android:textColor="@color/TextIcon" />

    <Button
        android:id="@+id/dialog_user_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@xml/button_blank_white"
        android:text="@string/save"
        android:textColor="@color/TextIcon" />

</LinearLayout>