<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_random_menu_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_random_menu_description"
            android:textColor="@color/TextIcon" />

        <RatingBar
            android:id="@+id/randomMenuRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:progress="3"
            android:stepSize="1" />

        <CheckBox
            android:id="@+id/checkBoxLastSuggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/dialog_random_menu_lastsuggestion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextIcon" />

        <Button
            android:id="@+id/dialog_random_menu_random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/button_blank_white"
            android:padding="3dp"
            android:text="@string/random"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="@color/TextIcon" />

        <TextView
            android:id="@+id/dialog_random_menu_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/example"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="@color/TextIcon" />

        <Button
            android:id="@+id/dialog_random_menu_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@xml/button_blank_white"
            android:text="@string/ok"
            android:textColor="@color/TextIcon" />
    </LinearLayout>

</ScrollView>