<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <TextView
        android:id="@+id/dialog_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon" />

    <TextView
        android:id="@+id/dialog_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_user_update_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/update"
            android:textColor="@color/TextIcon" />

        <Button
            android:id="@+id/dialog_user_close_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/close"
            android:textColor="@color/TextIcon" />
    </LinearLayout>

</LinearLayout>