<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_shopping_entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_shopping_entry_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <EditText
            android:id="@+id/dialog_shopping_entry_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_shopping_entry_name"
            android:textColor="@color/TextIcon" />

        <Spinner
            android:id="@+id/dialog_shopping_entry_group_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_shopping_entry_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/x"
                android:textColor="@color/TextIcon" />

            <Button
                android:id="@+id/dialog_shopping_entry_button_Count_Increase"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.25"
                android:background="@xml/button_blank_white"
                android:text="+"
                android:textColor="@color/TextIcon" />

            <Button
                android:id="@+id/dialog_shopping_entry_button_Count_Decrease"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.25"
                android:background="@xml/button_blank_white"
                android:text="-"
                android:textColor="@color/TextIcon" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <Button
            android:id="@+id/dialog_shopping_entry_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@xml/button_blank_white"
            android:text="@string/save"
            android:textColor="@color/TextIcon" />
    </LinearLayout>

</ScrollView>