<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/shape_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_schedule_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_schedule_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <EditText
            android:id="@+id/dialog_schedule_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_schedule_name"
            android:textColor="@color/TextIcon" />

        <Spinner
            android:id="@+id/dialog_schedule_socket_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/dialog_schedule_weekday_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/dialog_schedule_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/dialog_schedule_action_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <CheckBox
            android:id="@+id/dialog_schedule_playsound_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Sound"
            android:textColor="@color/TextIcon" />

        <Spinner
            android:id="@+id/dialog_schedule_playraspberry_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/TextIcon" />

        <Button
            android:id="@+id/dialog_schedule_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@xml/button_blank_white"
            android:text="@string/save"
            android:textColor="@color/TextIcon" />
    </LinearLayout>

</ScrollView>